--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@cord-sdk/api-types": "^1.45.1",
+    "@cord-sdk/chatbot-base": "^1.45.1",
+    "@cord-sdk/chatbot-openai": "^1.45.1",
     "@cord-sdk/server": "^1.45.1",
+    "@cord-sdk/types": "^1.45.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
